preparing to publish

--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
   "name": "bylight",
   "version": "1.0.0",
   "description": "Flexible Syntax Highlighting for Documentation",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "styles"
   ],
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     },
+    "./iife": "./dist/index.global.js",
     "./styles": "./styles/bylight.css"
   },
   "scripts": {
     "build": "tsup",
     "test": "vitest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "watch": "tsup --watch"
   },
   "repository": {
     "type": "git",
